--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet"/>
     <title>Encriptador</title>
 </head>
 <body>
-    
+    <header>
+      <img class="logo" src= "imagenes/logo_alura.png" alt="logotipo-alura">
+    </header>
+    <main>
+        <section>
+            <textarea class="text-area" cols="30" rows="" placeholder="Ingrese el texto aqui"></textarea>
+            <div>
+                <h6 class="informacion"> Solo letras minúsculas y sin acentos</h6>
+            </div>
+            <div class="botones">
+                <button class="btn-encriptar">Encriptador</button>
+                <button class="btn-encriptar">Desencriptar</button>
+            </div>
+        </section>
+        <section>
+            <textarea class="mensaje" cols="20" rows=10"" placeholder="Ingrese el texto aqui"></textarea>
+            <div>
+                <button class="copiar"> Copiar </button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
